--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "nyc": "^11.4.1",
+    "proxyquire": "^1.8.0",
     "standard": "^10.0.3",
     "tape": "^4.8.0"
   },
