--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "^2.3.0",
     "concat-stream": "^1.6.0",
     "find-nearest-file": "^1.1.0",
+    "meow": "^4.0.0",
     "minimist": "^1.2.0",
     "pino": "^4.10.3",
     "run-parallel": "^1.1.6"
