Set a default value for buildTool

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bugsnag-build-reporter",
   "version": "1.0.0-3",
-  "description": "A tool for reporting your application's builds to Bugsnag",
+  "description": "A tool for reporting your application’s builds to Bugsnag",
   "main": "index.js",
   "bin": "bin/cli.js",
   "scripts": {
